2000-07-31  Andy Heroff  <aheroff@mediaone.net>

	* client/gui.c: Fixed resize bug once and for all. Added VP target
	  listing in the status bar.

2000-07-30  Jeff Breidenbach  <jeff@alum.mit.edu>

	* debian/rules: Explicitly clean client/help/C/gnocatan to
	fix Debian bug #67287 (problem with the debian build of
	gnocatan-help). This is a non-beautiful solution.

2000-07-19  Bibek Sahu  <scorpio@dodds.net>

	* client/client.c, client/config-gnome.c, client/config-gnome.h,
	  client/connect.c, client/gnocatan.c, client/gui.c: Abstracted
	  getting/setting configuration values to be platform-agnostic. 
	  Still based on gnome-config, though; perhaps we want to stratify
	  the 'config path' into its various components?

2000-07-17  Andy Heroff  <aheroff@mediaone.net>

	* server/turn.c, server/develop.c, server/server.h: Fixed bug in
	  which the server would not check for a player victory after a
	  road building card had been played.

2000-07-09  Jeff Breidenbach  <jeff@alum.mit.edu>

	* debian/control: First pass at Build-Depends: field. (presumably
	useful for the Debian autobuilders.)

2000-07-08  Andy Heroff  <aheroff@mediaone.net>

	* client/gui.c: Changed notebook tabs from left to top to fix the
	  client resizing bug seen going in and out of trade.

2000-06-23  Jeff Breidenbach  <jeff@alum.mit.edu>

	* debian/README.debian: removed as recommended by
	http://www.debian.org/doc/maint-guide/ch-dother.html#s-readme

2000-06-21  Andy Heroff <aheroff@mediaone.net>

	* server/player.c: Fixed a bug where a player with an older client
	  that doesn't report its version would have a player number of 0.

2000-06-19  Jeff Breidenbach  <jeff@alum.mit.edu>

	* debian/control, debian/changelog: update maintainer name,
	version numbers for debian packages.

2000-06-19  Dave Cole <dave@dccs.com.au>

	* client/connect.c (connect_create_dlg): Removed code which forced
	uppercase first character on gnome config player name.
	
2000-06-18  Andy Heroff <aheroff@mediaone.net>
