@@ -1,3 +1,12 @@
+2000-08-01  Andy Heroff  <aheroff@mediaone.net>
+
+	* client/gui.c: Quick change to VP target text to make less
+	  ambiguous.
+
+	* server/turn.c: Added debug for 'too-many' error. In the future,
+	  all errors should be unique in some way (An identifier after the
+	  description) so we can track the source of bugs.
+
 2000-07-31  Andy Heroff  <aheroff@mediaone.net>
 
 	* client/gui.c: Fixed resize bug once and for all. Added VP target
